--- a/analysis/nw/README
+++ b/analysis/nw/README
@@ -1,7 +1,7 @@
 HDOTALIGNER=/home/stesee/DotAligner
-PROG=nw
-DATA=seed_10_55.new
-#DATA=seed_56_95.new
+export PROG=nw
+export DATA=seed_10_55.new
+#export DATA=seed_56_95.new
 NRSPLIT=120
 #NRSPLIT=126
 
@@ -49,30 +49,30 @@ merge.pl <(cut -d" " -f2 ${DATA}.${PROG}.clusters.list | sort | uniq -c) <(ls ${
 ${HDOTALIGNER}/bin/clusterstatistics.pl ${DATA}.${PROG}.clusters.list ${DATA}.${PROG}.noclusters.list
 
 DATA=seed_56_95.new
-RF01699:	TP = 7	FP = 110	TN = 37	FN = 0	SP = 0.2517	SN = 1.0000
-RF02001:	TP = 10	FP = 107	TN = 37	FN = 0	SP = 0.2569	SN = 1.0000
-RF00015:	TP = 20	FP = 97	TN = 37	FN = 0	SP = 0.2761	SN = 1.0000
-RF01685:	TP = 20	FP = 17	TN = 117	FN = 0	SP = 0.8731	SN = 1.0000
-RF00379:	TP = 20	FP = 97	TN = 37	FN = 0	SP = 0.2761	SN = 1.0000
-RF01055:	TP = 14	FP = 103	TN = 37	FN = 0	SP = 0.2643	SN = 1.0000
-RF00557:	TP = 3	FP = 114	TN = 37	FN = 0	SP = 0.2450	SN = 1.0000
-RF00162:	TP = 17	FP = 20	TN = 114	FN = 3	SP = 0.8507	SN = 0.8500
-RF00380:	TP = 20	FP = 97	TN = 37	FN = 0	SP = 0.2761	SN = 1.0000
-RF00013:	TP = 20	FP = 97	TN = 37	FN = 0	SP = 0.2761	SN = 1.0000
-SP = 0.3846
-SN = 0.9850
+RF01699:	TP = 10	FP = 0	TN = 124	FN = 7	SP = 1.0000	SN = 0.5882
+RF02001:	TP = 20	FP = 16	TN = 105	FN = 0	SP = 0.8678	SN = 1.0000
+RF00015:	TP = 5	FP = 0	TN = 127	FN = 9	SP = 1.0000	SN = 0.3571
+RF00059:	TP = 14	FP = 4	TN = 117	FN = 6	SP = 0.9669	SN = 0.7000
+RF02003:	TP = 4	FP = 0	TN = 264	FN = 14	SP = 1.0000	SN = 0.2222
+RF00379:	TP = 4	FP = 32	TN = 97	FN = 8	SP = 0.7519	SN = 0.3333
+RF01055:	TP = 2	FP = 0	TN = 122	FN = 17	SP = 1.0000	SN = 0.1053
+RF00557:	TP = 8	FP = 0	TN = 121	FN = 12	SP = 1.0000	SN = 0.4000
+RF00162:	TP = 3	FP = 15	TN = 122	FN = 1	SP = 0.8905	SN = 0.7500
+RF00380:	TP = 6	FP = 30	TN = 105	FN = 0	SP = 0.7778	SN = 1.0000
+SP = 0.9255
+SN = 0.5456
+
 DATA=seed_10_55.new
-RF01699:	TP = 17	FP = 4	TN = 130	FN = 0	SP = 0.9701	SN = 1.0000
-RF02001:	TP = 20	FP = 12	TN = 119	FN = 0	SP = 0.9084	SN = 1.0000
-RF00015:	TP = 11	FP = 0	TN = 137	FN = 3	SP = 1.0000	SN = 0.7857
-RF02003:	TP = 9	FP = 1	TN = 141	FN = 0	SP = 0.9930	SN = 1.0000
-RF00059:	TP = 13	FP = 4	TN = 127	FN = 7	SP = 0.9695	SN = 0.6500
-RF00379:	TP = 4	FP = 28	TN = 111	FN = 8	SP = 0.7986	SN = 0.3333
-RF01794:	TP = 10	FP = 0	TN = 141	FN = 0	SP = 1.0000	SN = 1.0000
-RF01055:	TP = 2	FP = 0	TN = 132	FN = 17	SP = 1.0000	SN = 0.1053
-RF00557:	TP = 18	FP = 0	TN = 131	FN = 2	SP = 1.0000	SN = 0.9000
-RF00162:	TP = 3	FP = 14	TN = 133	FN = 1	SP = 0.9048	SN = 0.7500
-RF00380:	TP = 6	FP = 26	TN = 119	FN = 0	SP = 0.8207	SN = 1.0000
-SP = 0.9423
-SN = 0.7749
+RF01699:	TP = 7	FP = 31	TN = 116	FN = 0	SP = 0.7891	SN = 1.0000
+RF02001:	TP = 10	FP = 28	TN = 116	FN = 0	SP = 0.8056	SN = 1.0000
+RF00015:	TP = 10	FP = 0	TN = 134	FN = 10	SP = 1.0000	SN = 0.5000
+RF01685:	TP = 20	FP = 17	TN = 117	FN = 0	SP = 0.8731	SN = 1.0000
+RF00379:	TP = 20	FP = 0	TN = 134	FN = 0	SP = 1.0000	SN = 1.0000
+RF01055:	TP = 14	FP = 0	TN = 140	FN = 0	SP = 1.0000	SN = 1.0000
+RF00557:	TP = 2	FP = 0	TN = 151	FN = 1	SP = 1.0000	SN = 0.6667
+RF00162:	TP = 17	FP = 20	TN = 114	FN = 3	SP = 0.8507	SN = 0.8500
+RF00380:	TP = 20	FP = 18	TN = 116	FN = 0	SP = 0.8657	SN = 1.0000
+RF00013:	TP = 20	FP = 0	TN = 134	FN = 0	SP = 1.0000	SN = 1.0000
+SP = 0.9184
+SN = 0.9017
 
