--- a/analysis/pmcomp/README
+++ b/analysis/pmcomp/README
@@ -1,7 +1,7 @@
 HDOTALIGNER=/home/stesee/DotAligner
-PROG=pmcomp
-DATA=seed_10_55.new
-#DATA=seed_56_95.new
+export PROG=pmcomp
+export DATA=seed_10_55.new
+#export DATA=seed_56_95.new
 NRSPLIT=120
 #NRSPLIT=126
 
@@ -16,4 +16,49 @@ for i in `perl -e '{for(my $i=191; $i>=0; $i--){printf("%03i ",$i)}}'`; do cat j
 chmod 744 jobs/${PROG}4benchmark_${DATA}*
 #submit jobs
 qsub -q all.q -N ${PROG}4ben -t 1-192 job_launch_${PROG}.sge
+#merge results
+for i in `perl -e '{for(my $i=0; $i<=190; $i++){printf("%03i ",$i)}}'`; do cat ${DATA}.${PROG}${i} >> ${DATA}.${PROG}; done
+cat ${DATA}.${PROG} | grep -v "increasing" | awk 'BEGIN{OFS=","}{if(/^\/home/){split($1,a,"/");split($2,b,"/");sub(/_dp.ps/,"",a[length(a)]);sub(/_dp.ps/,"",b[length(a)]);s1=a[length(a)];s2=b[length(b)]};if(/score/){sc=sprintf("%6.5f",$3)}else{if(/^[0123456789]/ || /^-[0123456789]/){sc=sprintf("%6.5f",$1)}};if(/user/){split($2,c,"m");sub("s","",c[2]);time=60*c[1]+c[2]; print s1,s2,sc,time} }' | gzip >  ${DATA}.${PROG}.csv.gz
+
+#pvclust
+gunzip -c ${DATA}.${PROG}.csv.gz | awk '{gsub(/,/,"\t");if($1==$2){print $1,$2,$3}else{print $1,$2,$3"\n"$2,$1,$3}}' | sort -k1,2 | awk 'BEGIN{ORS=""}{print $3," "; if(NR%154 == 0){print "\n"}}' > ${DATA}.${PROG}.2x2
+gunzip -c ${DATA}.${PROG}.csv.gz | awk '{gsub(/,/,"\t");if($1==$2){print $1,$2,$3}else{print $1,$2,$3"\n"$2,$1,$3}}' | cut -d" " -f1 | sort -u | awk '{split($1,a,"_");print a[1]}' > ${DATA}.identifier
+#submit job
+qsub -q all.q -N pc4${PROG} job_launch_pvclust.sge
+
+#get members of clusters
+cat ${DATA}.${PROG}.clusters | awk '{if(/^\[\[/){gsub(/\[/,"",$1);gsub(/\]/,"",$1);c=$1}else{if(/\[\s*/){for(i=2;i<=NF;i++){gsub(/"/,"",$i);print c,$i}}}}' > ${DATA}.${PROG}.clusters.list
+#get non-clustered families as FN
+merge.pl <(cut -d" " -f2 ${DATA}.${PROG}.clusters.list | sort | uniq -c) <(ls ${HDOTALIGNER}/analysis/rfam/selected_PIDs/${DATA}/*.fa | awk '{split($1,a,/\//);split(a[length(a)],b,/_/);print b[1]}' | sort | uniq -c ) 2,2 | awk '{print ($1-$3),$2}' > ${DATA}.${PROG}.noclusters.list
+${HDOTALIGNER}/bin/clusterstatistics.pl ${DATA}.${PROG}.clusters.list ${DATA}.${PROG}.noclusters.list
+
+DATA=seed_10_55.new
+RF01699:	TP = 10	FP = 0	TN = 134	FN = 7	SP = 1.0000	SN = 0.5882
+RF00015:	TP = 1	FP = 15	TN = 122	FN = 13	SP = 0.8905	SN = 0.0714
+RF02001:	TP = 3	FP = 0	TN = 131	FN = 17	SP = 1.0000	SN = 0.1500
+RF00059:	TP = 12	FP = 4	TN = 127	FN = 8	SP = 0.9695	SN = 0.6000
+RF02003:	TP = 3	FP = 0	TN = 142	FN = 6	SP = 1.0000	SN = 0.3333
+RF00379:	TP = 2	FP = 0	TN = 139	FN = 10	SP = 1.0000	SN = 0.1667
+RF01794:	TP = 3	FP = 0	TN = 141	FN = 7	SP = 1.0000	SN = 0.3000
+RF01055:	TP = 6	FP = 0	TN = 132	FN = 13	SP = 1.0000	SN = 0.3158
+RF00557:	TP = 3	FP = 0	TN = 131	FN = 17	SP = 1.0000	SN = 0.1500
+RF00162:	TP = 3	FP = 13	TN = 134	FN = 1	SP = 0.9116	SN = 0.7500
+RF00380:	TP = 3	FP = 0	TN = 145	FN = 3	SP = 1.0000	SN = 0.5000
+SP = 0.9792
+SN = 0.3569
+
+DATA=seed_56_95.new
+RF01699:	TP = 7	FP = 0	TN = 147	FN = 0	SP = 1.0000	SN = 1.0000
+RF02001:	TP = 9	FP = 0	TN = 144	FN = 1	SP = 1.0000	SN = 0.9000
+RF00015:	TP = 3	FP = 0	TN = 134	FN = 17	SP = 1.0000	SN = 0.1500
+RF01685:	TP = 19	FP = 0	TN = 134	FN = 1	SP = 1.0000	SN = 0.9500
+RF00379:	TP = 5	FP = 0	TN = 134	FN = 15	SP = 1.0000	SN = 0.2500
+RF01055:	TP = 6	FP = 0	TN = 140	FN = 8	SP = 1.0000	SN = 0.4286
+RF00557:	TP = 2	FP = 0	TN = 151	FN = 1	SP = 1.0000	SN = 0.6667
+RF00162:	TP = 8	FP = 0	TN = 536	FN = 72	SP = 1.0000	SN = 0.1000
+RF00380:	TP = 20	FP = 0	TN = 134	FN = 0	SP = 1.0000	SN = 1.0000
+RF00013:	TP = 20	FP = 0	TN = 134	FN = 0	SP = 1.0000	SN = 1.0000
+SP = 1.0000
+SN = 0.6445
+
 
