updated abstract and title

--- a/paper/dotaligner_v2.tex
+++ b/paper/dotaligner_v2.tex
@@ -58,24 +58,23 @@
 \abstract{Non-protein coding RNAs (ncRNAs) are the prevalent transcriptional 
 product of higher eukaryote genomes. Their varied biological functions are 
 governed by both their sequence composition and their higher-order structural 
-conformation. The uncertainty of secondary structure prediction algorithms 
-for single RNA sequences in conjunction with the limited diversity of well-
-characterised RNA structures have restricted the identification and annotation
+conformation. The uncertainty of secondary structure prediction algorithms for 
+single RNA sequences in conjunction with the limited diversity of well-
+characterised RNA structures have restricted the identification and annotation 
 of novel functional ncRNA domains. Here, we present a unified computational 
-methodology for the identification of common RNA secondary structures from 
-a set of sequences, requiring little to no user intervention while being 
-fully customisable. We compare the performance of several state of the 
-art tools for pairwise secondary structure alignment with \dotaligner , a 
-novel algorithm we developed that considers the ensemble of sub-optimal RNA 
-base pairings between two RNA sequences simultaneously. Through hierarchical 
-clustering and bootstrapping analysis, our method identifies statistically 
-significant clusters of homologous, structured RNA domains with no limitations 
-on the sequence composition of the input. We successfully identify known RNA 
-secondary structures mixed in with randomised controls, as well as novel 
-structured domains from various previously published transcriptomic datasets.}
+methodology for the identification of common RNA secondary structures from a set 
+of sequences, requiring little to no user intervention while being fully 
+customisable. We compare the performance of several state of the art tools for 
+pairwise secondary structure alignment with \dotaligner , a novel algorithm we 
+developed that considers the ensemble of sub-optimal RNA base pairings between 
+two RNA sequences simultaneously. Through hierarchical clustering and 
+bootstrapping analysis, our method identifies statistically significant clusters 
+of homologous, structured RNA domains with no limitations on the sequence 
+composition of the input. We successfully identify known RNA secondary structures 
+mixed in with randomised controls, as well as novel structured domains from 
+various previously published transcriptomic datasets.}
 
 \onecolumn \maketitle \normalsize \vfill
-
 
 \section{\uppercase{Introduction}}
 \label{sec:introduction}
